# LxWEngD

./: Cargo.toml  PLAN.md  README.md  flake.nix  package.nix
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
daemon/: Cargo.toml
daemon/src/: backend.rs  cli.rs  commands.rs  daemon.rs  entry.rs  lib.rs  main.rs  playlist.rs  resume.rs  runner.rs  socket.rs  wallpaper.rs
daemon/src/backends/: backend.rs  linux_wallpaperengine.rs  mod.rs
daemon/src/runner/: action.rs  actions.rs  commands.rs  exec.rs  imp.rs  mod.rs  pause.rs  runner.rs  subprocess.rs
daemon/src/utils/: command.rs  ipc.rs  mod.rs  playlist.rs  resume.rs  socket.rs  state.rs  subprocess.rs
playlists/: default.playlist  goto.playlist  test.playlist
src/: commands.rs  lib.rs  main.rs  playlist.rs  resume.rs  runner.rs  wallpaper.rs
tests/: runner_general.rs  runner_goto.rs
tests/common/: mod.rs
