[package]
name = "lxwengd"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
duration-str = "0.13.0"
fern = "0.7.1"
lazy_static = "1.5.0"
log = "0.4.26"
subprocess = "0.2.9"

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = [ "std", "clock" ]
