[workspace]
resolver = "3"
members = ["daemon", "cli"]

[workspace.lints.clippy]
pedantic = "warn"

[workspace.package]
version = "1.1.0"
authors = ["ckgxrg <ckgxrg@ckgxrg.io>"]
edition = "2024"
license = "BSD 2 Clause"
description = "A daemon that adds playlists to linux-wallpaperengine."
repository = "https://codeberg.org/ckgxrg/LxWEngd"

[workspace.dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.43", features = ["derive"] }
duration-str = "0.18.0"
fern = "0.7.1"
log = "0.4.26"
nix = { version = "0.31.1", features = ["signal"] }
nom = "8.0.0"
smol = "2.0.2"
thiserror = "2.0.14"

env_logger = "0.11.6"

[workspace.dependencies.chrono]
version = "0.4.40"
default-features = false
features = [ "std", "clock" ]
