[package]
name = "lxwengd"
version.workspace = true
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
duration-str = "0.13.0"
fern = "0.7.1"
lazy_static = "1.5.0"
log = "0.4.26"
subprocess = "0.2.9"

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = [ "std", "clock" ]

[dev-dependencies]
env_logger = "0.11.6"
