[package]
name = "lxwengd"
description = "The daemon part"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
duration-str = "0.13.0"
fern = "0.7.1"
log = "0.4.26"
nix = { version = "0.30.1", features = ["signal"] }
nom = "8.0.0"
smol = "2.0.2"
thiserror = "2.0.14"

[dependencies.chrono]
version = "0.4.40"
default-features = false
features = [ "std", "clock" ]

[dev-dependencies]
env_logger = "0.11.6"
