[package]
name = "lxwengd"
description = "The daemon part"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-recursion.workspace = true
clap.workspace = true
duration-str.workspace = true
fern.workspace = true
log.workspace = true
nix.workspace = true
nom.workspace = true
smol.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
env_logger.workspace = true
